<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    
    <data>
        <variable
            name="activity"
            type="com.akuari.noteapp.ui.activity.DetailActivity" />

    </data>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/BackgroundColorHedaer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:gravity="center" />

            <Switch
                android:id="@+id/switch_dark_mode"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{(button, bool)-> activity.switchDarkMode(bool)}"
                android:thumb="@drawable/ic_dark_mode"
                android:thumbTint="@color/thumbTintMoon"
                android:track="@drawable/background_switch_dark_mode"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>
        </LinearLayout>

        
        <TextView
            android:id="@+id/detail_title_note_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_title"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:text="@string/title"
            android:textColor="@color/textColorButton"
            android:textSize="24sp"
            android:textStyle="bold" />

        
        <TextView
            android:id="@+id/detail_note_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_description"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:text="@string/description"
            android:textColor="@color/textColorButton"
            android:textSize="18sp" />

        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:onClick="editData"
            android:padding="@dimen/_16sdp"
            android:text="@string/edit"
            android:textColor="@color/textColorButton" />

        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_button"
            android:gravity="center"
            android:onClick="deleteData"
            android:padding="@dimen/_16sdp"
            android:text="@string/delete"
            android:textColor="@color/textColorButton" />
    </LinearLayout>
</layout>
