<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        
        <variable
            name="activity"
            type="com.akuari.noteapp.ui.activity.AddNoteActivity" />

    </data>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/BackgroundColorHedaer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:gravity="center" />

            <Switch
                android:id="@+id/switch_dark_mode"
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{(button, bool)-> activity.switchDarkMode(bool)}"
                android:thumb="@drawable/ic_dark_mode"
                android:thumbTint="@color/thumbTintMoon"
                android:track="@drawable/background_switch_dark_mode"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>
        </LinearLayout>

        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_title_note_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_title"
            app:endIconMode="clear_text"
            app:errorEnabled="true">
            
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_title_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:hint="@string/enter_title"
                android:inputType="textAutoComplete"
                android:text='@={activity.title}'
                app:passwordToggleEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_note_description_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_description"
            app:endIconMode="clear_text"
            app:errorEnabled="true">
            
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_note_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:padding="@dimen/_16sdp"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="3"
                android:text='@={activity.description}'
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="saveData"
            android:padding="@dimen/_16sdp"
            android:text="@string/save"
            android:textColor="@color/textColorButton" />
    </LinearLayout>
</layout>
